<resources>
    <string name="app_name">Soroush+</string>
    <string name="get_contact">Get Contact</string>
    <string name="setting">setting</string>
    <string name="never_mind">Now not</string>
    <string name="pooria_darvishi">Pooria Darvishi</string>
    <string name="phone_number">PhoneNumber:</string>
    <string name="phone_number_example">09202122515</string>
    <string name="email_example">pooria.darvishi.82@gmail.com</string>
    <string name="contact_info">Contact Info:</string>
    <string name="Permission_granted">Allow access to contacts</string>
    <string name="permission_request">The app must have access to your contacts in order to show them to you</string>
    <string name="continue_permission">Continuation</string>
    <string name="syncing">Synchronizing</string>
    <string name="syncing_success">Universalization is complete</string>
    <string name="permission_failed">Access to contacts was not granted</string>
    <string name="cant_find_contacts">Contacts not found</string>
    <string name="search">search…</string>
    <string name="p">P</string>
    <string name="image_profile">imageProfile</string>
    <string name="get_permission">GetPermission</string>
    <string name="receiving_problem">There was a problem receiving information</string>
    <string name="retry">Retry</string>
    <string name="cant_find_contact">The audience no longer exists</string>
</resources>