<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_20dp"
        app:cardElevation="@dimen/_10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">

            <ImageView
                android:id="@+id/ig_contactProfile"
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                android:layout_margin="@dimen/_10dp"
                android:src="@drawable/contacts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/Permission_granted"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:gravity="center"
                android:text="@string/permission_request"
                android:textSize="@dimen/_20sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20dp"
                    android:gravity="center"
                    android:text="@string/never_mind"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/button"
                    android:background="null"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20dp"
                    android:text="@string/continue_permission"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>