<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:padding="0dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10dp"
            android:layout_marginStart="@dimen/_12dp"
            android:layout_marginEnd="@dimen/_12dp">


            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                app:cardBackgroundColor="@color/card"
                app:cardCornerRadius="@dimen/_100dp"
                app:cardElevation="@dimen/cardview_compat_inset_shadow">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ig_contactProfile"
                    android:layout_width="@dimen/_48dp"
                    android:layout_height="@dimen/_48dp"
                    android:contentDescription="@string/image_profile" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="@dimen/_48sp"
                    android:layout_height="@dimen/_48sp"
                    android:fontFamily="@font/arizonia"
                    android:gravity="center"
                    android:text="@string/p"
                    android:textColor="@color/icon"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />


            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


            <TextView
                android:id="@+id/tv_contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10dp"
                android:padding="@dimen/_10dp"
                android:fontFamily="@font/iransans"
                android:text="@string/pooria_darvishi"
                android:textSize="@dimen/_20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>