<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/sv_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_10dp"
                tools:context=".ui.details.DetailsFragment">


                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    app:cardBackgroundColor="@color/card"
                    app:cardCornerRadius="@dimen/_100dp"
                    app:cardElevation="@dimen/cardview_compat_inset_shadow">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ig_contactProfile"
                        android:layout_width="@dimen/_150dp"
                        android:layout_height="@dimen/_150dp"
                        android:contentDescription="@string/image_profile" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="@dimen/_150dp"
                        android:layout_height="@dimen/_150dp"
                        android:fontFamily="@font/arizonia"
                        android:gravity="center"
                        android:text="@string/p"
                        android:textColor="@color/icon"
                        android:textSize="@dimen/_48sp"
                        android:textStyle="bold" />


                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


                <TextView
                    android:id="@+id/tv_nameContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_marginBottom="@dimen/_50dp"
                    android:fontFamily="@font/iransans"
                    android:gravity="center"
                    android:text="@string/pooria_darvishi"
                    android:textSize="@dimen/_30sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10dp"
                    app:cardCornerRadius="@dimen/_5dp"
                    app:cardElevation="@dimen/cardview_compat_inset_shadow">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:text="@string/contact_info"
                            android:fontFamily="@font/iransans"
                            android:textSize="@dimen/_10sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10dp"
                            android:orientation="horizontal">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="@dimen/_40dp"
                                android:layout_height="@dimen/_40dp"
                                android:layout_marginEnd="@dimen/_10dp"
                                android:src="@drawable/phone" />

                            <TextView
                                android:id="@+id/tv_phoneNumber"
                                android:layout_width="0dp"
                                android:fontFamily="@font/iransans"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/phone_number_example" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_10dp"
                            android:orientation="horizontal">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="@dimen/_40dp"
                                android:layout_height="@dimen/_40dp"
                                android:layout_marginEnd="@dimen/_10dp"
                                android:src="@drawable/email" />

                            <TextView
                                android:id="@+id/tv_email"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:text="@string/email_example" />

                        </LinearLayout>


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </FrameLayout>


</layout>